--- a/ConstructionXpert/user-service/src/main/resources/application.yml
+++ b/ConstructionXpert/user-service/src/main/resources/application.yml
@@ -6,8 +6,8 @@ spring:
     name: user-service
   datasource:
     url: jdbc:mysql://localhost:3306/users_db?createDatabaseIfNotExist=true
-    username: springstudent
-    password: springstudent
+    username: root
+    password: jujuRO55
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
