--- a/ConstructionXpert/docker-compose.yml
+++ b/ConstructionXpert/docker-compose.yml
@@ -83,7 +83,7 @@ services:
     restart: always
     environment:
       MYSQL_DATABASE: project_db_2
-      MYSQL_ROOT_PASSWORD: 1234
+      MYSQL_ROOT_PASSWORD: jujuRO55
     volumes:
       - project-db:/var/lib/mysql
     networks:
@@ -94,7 +94,7 @@ services:
     restart: always
     environment:
       MYSQL_DATABASE: resource_db_2
-      MYSQL_ROOT_PASSWORD: 1234
+      MYSQL_ROOT_PASSWORD: jujuRO55
     volumes:
       - resource-db:/var/lib/mysql
     networks:
@@ -105,7 +105,7 @@ services:
     restart: always
     environment:
       MYSQL_DATABASE: task_db_2
-      MYSQL_ROOT_PASSWORD: 1234
+      MYSQL_ROOT_PASSWORD: jujuRO55
     volumes:
       - task-db:/var/lib/mysql
     networks:
@@ -116,7 +116,7 @@ services:
     restart: always
     environment:
       MYSQL_DATABASE: user_db_2
-      MYSQL_ROOT_PASSWORD: 1234
+      MYSQL_ROOT_PASSWORD: jujuRO55
     volumes:
       - user-db:/var/lib/mysql
     networks:
