--- a/ConstructionXpert/docker-compose.yml
+++ b/ConstructionXpert/docker-compose.yml
@@ -78,6 +78,30 @@ services:
     networks:
       - microservices-net
 
+  sonarqube:
+    image: sonarqube:latest
+    ports:
+      - "9000:9000"
+    environment:
+      - SONAR_JDBC_URL=jdbc:postgresql://sonarqubedb:5432/sonarqube
+      - SONAR_JDBC_USERNAME=sonar
+      - SONAR_JDBC_PASSWORD=sonar
+    depends_on:
+      - sonarqubedb
+    networks:
+      - microservices-net
+
+  sonarqubedb:
+    image: mysql:latest
+    environment:
+      - POSTGRES_USER=sonar
+      - POSTGRES_PASSWORD=sonar
+      - POSTGRES_DB=sonarqube
+    volumes:
+      - sonarqube-db:/var/lib/mysql/data
+    networks:
+      - microservices-net
+
   projectdb:
     image: "mysql:latest"
     restart: always
@@ -127,6 +151,7 @@ volumes:
   resource-db:
   task-db:
   user-db:
+  sonarqube-db:
 
 networks:
   microservices-net:
