--- a/ConstructionXpert/project-service/pom.xml
+++ b/ConstructionXpert/project-service/pom.xml
@@ -19,6 +19,8 @@
 		<maven.compiler.source>21</maven.compiler.source>
 		<maven.compiler.target>21</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<sonar.host.url>http://localhost:9000</sonar.host.url>
+		<sonar.login>sqa_5d8ad52ce5626b24bed47d8d485a437676c9c06e</sonar.login>
 	</properties>
 
 	<dependencies>
